# Powered-Descent-Robust-Data-Driven-Control-Using-Quadratic-Funnels

./: .gitignore
ddfs/configs/: constants.yaml  mars_2d_physical.yaml  mars_6dof_physical.yaml
ddfs/cons_calc/: __init__.py  disturbance_bounds.py  mismatch.py  nominal_bound.py  smoothness.py  variation_bounds.py
ddfs/core/: calc_max_ellipsoids.py  constants.py  data_logger.py  deviation_model.py  disturbance_bounds.py  excitation.py  feasibility_guard.py  initial_gain.py  mismatch.py  nominal_bound.py  segment_manager.py  variation_bounds.py
ddfs/envelopes/: cache.py  max_ellipsoids.py  mvie_input.py  mvie_state.py  segment_envelopes.py
ddfs/io/: datasets.py  load_nominal.py  paths.py  registry.py  save_ddfs.py
ddfs/run/: collect_data.py  dry_run_offline.py  run_segmented.py
ddfs/sdp/: add_constraints.py  build_problem.py  slemma_blocks.py  solve.py
ddfs/sets/: premise_blocks.py  sigma_data.py  sigma_delta.py
ddfs/utils/: checks.py  la.py  (+4 more)
models/: base.py  discretization.py  frames.py  rocket2d.py  rocket6dof.py  sym_rocket2d.py  sym_rocket6dof.py
nominal/: README.md  pyproject.toml
nominal/configs/: mars_2d_fixed.yaml  mars_6dof_free.yaml
nominal/dynamics/: scaling.py  sympy_backend.py
nominal/dynamics/integrators/: foh_fixed.py  foh_free.py
nominal/init/: warmstart.py
nominal/io/: load.py  save.py
nominal/run/: run_fixed.py  run_free.py
nominal/scvx/: fixed_final_time.py  free_final_time.py  problem_base.py
nominal/solvers/: cvxpy_solve.py
nominal/utils/: formatting.py  quats.py  seeds.py
nominal/viz/: plot2d.py  plot3d.py
(+34 files in other folders)
